update in source path of image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				
 			</div>
 			<div class="head-content">
-				<img src="images/Abhi.jpeg" height="300px" width="300px">
+				<img src="Abhi.jpeg" height="300px" width="300px">
 				<p class="name">Abhishek Kumar</p>
 				<p class="desc">Software Developer</p>
 			</div>
@@ -42,9 +42,9 @@
 		<br>
 		<div class="gallery-section" id="gallery">
 			<h2>My Gallery</h2>
-			<img src="images/1.jpg">
-			<img src="images/11.jpg">
-			<img src="images/1111.jpg">
+			<img src="1.jpg">
+			<img src="11.jpg">
+			<img src="1111.jpg">
 
 		</div>
 		<div class="contact-section" id="contact">
