--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	
 	<link rel="stylesheet" type="text/css" href="Style.css">
 	<title>Abhishek Kumar</title>
+	<script src="https://kit.fontawesome.com/6183d0ee8c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
 				
 			</div>
 			<div class="head-content">
-				<img src="Abhi.jpeg" height="300px" width="300px">
+				<img src="images/Abhi.jpeg" height="300px" width="300px">
 				<p class="name">Abhishek Kumar</p>
 				<p class="desc">Software Developer</p>
 			</div>
@@ -42,15 +43,32 @@
 		<br>
 		<div class="gallery-section" id="gallery">
 			<h2>My Gallery</h2>
-			<img src="1.jpg">
-			<img src="11.jpg">
-			<img src="1111.jpg">
+			<img src="images/1.jpg">
+			<img src="images/5.jpg">
+			<img src="images/1111.jpg">
+			<img src="images/5.jpg">
+			<img src="images/3.jpg">
+			<img src="images/11.jpg">
+			<img src="images/5.jpg">
+			<img src="images/111.jpg">
+			<img src="images/1.jpg">
+			<img src="images/11.jpg">
+			<img src="images/3.jpg">
+			<img src="images/4.jpg">
+			<img src="images/11.jpg">
+			<img src="images/5.jpg">
+			<img src="images/1.jpg">
+			<img src="images/11.jpg">
+			<img src="images/111.jpg">
+			<img src="images/1111.jpg">
+
+			
 
 		</div>
 		<div class="contact-section" id="contact">
 			<span>Contact Me</span>
 		
-			<input type="text" class="inp-name" placeholder="Name">
+			<input type="text"  class="inp-name" placeholder="Name">
 			<input type="text" class="inp-mail" placeholder="Your Email">
 			<textarea rows="10" cols="40" placeholder="Your Message" class="inp-msg"></textarea>
 			<input type="button" class="inp-btn" value="Submit">
@@ -58,8 +76,15 @@
 		
 		</div>
 		<div class="copyright">
+			<div class="contacticon">
+				<a href="tel:+917352099038"><i class="fa-solid fa-phone"></i> Mobile</a>
+				<a href="mailto:abhishekabhi7352@gmail.com"><i class="fa-sharp fa-light fa-envelope"></i>Email</a>
+				<a href="https://www.linkedin.com/in/abhishekk7352/"><i class="fa-brands fa-linkedin-in"></i>Linked In</a>
+			</div>
+
 			<p>Abhishek Kumar &copy; 2023</p>
 		</div>
+
 	</div>
 </body>
 
