--- a/index.html
+++ b/index.html
@@ -43,24 +43,24 @@
 		<br>
 		<div class="gallery-section" id="gallery">
 			<h2>My Gallery</h2>
-			<img src="images/1.jpg">
-			<img src="images/5.jpg">
-			<img src="images/1111.jpg">
-			<img src="images/5.jpg">
-			<img src="images/3.jpg">
-			<img src="images/11.jpg">
-			<img src="images/5.jpg">
-			<img src="images/111.jpg">
-			<img src="images/1.jpg">
-			<img src="images/11.jpg">
-			<img src="images/3.jpg">
-			<img src="images/4.jpg">
-			<img src="images/11.jpg">
-			<img src="images/5.jpg">
-			<img src="images/1.jpg">
-			<img src="images/11.jpg">
-			<img src="images/111.jpg">
-			<img src="images/1111.jpg">
+			<img src="1.jpg">
+			<img src="5.jpg">
+			<img src="1111.jpg">
+			<img src="5.jpg">
+			<img src="3.jpg">
+			<img src="11.jpg">
+			<img src="5.jpg">
+			<img src="111.jpg">
+			<img src="1.jpg">
+			<img src="11.jpg">
+			<img src="3.jpg">
+			<img src="4.jpg">
+			<img src="11.jpg">
+			<img src="5.jpg">
+			<img src="1.jpg">
+			<img src="11.jpg">
+			<img src="111.jpg">
+			<img src="1111.jpg">
 
 			
 
