update html file

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				
 			</div>
 			<div class="head-content">
-				<img src="images/Abhi.jpeg" height="300px" width="300px">
+				<img src="Abhi.jpeg" height="300px" width="300px">
 				<p class="name">Abhishek Kumar</p>
 				<p class="desc">Software Developer</p>
 			</div>
